--- a/code/blog.ipynb
+++ b/code/blog.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This is a blog covering blogs. \n",
     "\n",
-    "Here is a cool big of code to help you with your next blogging adventure: "
+    "Here is a cool bit of code to help you with your next blogging adventure: "
    ]
   },
   {
@@ -58,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
