--- a/01-code/02-title-here-blog.ipynb
+++ b/01-code/02-title-here-blog.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "I made this image with code!\n",
     "\n",
-    "![Cool image showing cool data](../images/line_plot.png \"Mouseover text\")"
+    "![Cool image showing cool data](../02-images/line_plot.png \"Mouseover text\")"
    ]
   }
  ],
@@ -58,7 +58,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
